{
  "version": 4,
  "terraform_version": "1.0.11",
  "serial": 191,
  "lineage": "c1e6d845-155f-de79-d622-aeb581cc0a3a",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "ngw-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-058ca78fc34c9c5a4",
            "domain": "vpc",
            "id": "eipalloc-095a785bafae26833",
            "network_border_group": "us-east-1",
            "network_interface": "eni-00fa1c830dfe405e4",
            "private_dns": "ip-10-0-3-17.ec2.internal",
            "private_ip": "10.0.3.17",
            "public_dns": "ec2-52-22-219-180.compute-1.amazonaws.com",
            "public_ip": "52.22.219.180",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "prod",
              "Name": "sb-prod-liberland-ngw-eip-a",
              "Namespace": "sb"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "sb-prod-liberland-ngw-eip-a",
              "Namespace": "sb"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "ngw-b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-0fc8660f3be6abb6b",
            "domain": "vpc",
            "id": "eipalloc-0d2790736a190e1a6",
            "network_border_group": "us-east-1",
            "network_interface": "eni-065050a5d2602ca6a",
            "private_dns": "ip-10-0-4-186.ec2.internal",
            "private_ip": "10.0.4.186",
            "public_dns": "ec2-3-226-86-88.compute-1.amazonaws.com",
            "public_ip": "3.226.86.88",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "prod",
              "Name": "sb-prod-liberland-ngw-eip-b",
              "Namespace": "sb"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "sb-prod-liberland-ngw-eip-b",
              "Namespace": "sb"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "ngw-c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-0a0e2febe8564d592",
            "domain": "vpc",
            "id": "eipalloc-06404542c9a870980",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0ed71cb197970c82d",
            "private_dns": "ip-10-0-5-157.ec2.internal",
            "private_ip": "10.0.5.157",
            "public_dns": "ec2-107-21-223-2.compute-1.amazonaws.com",
            "public_ip": "107.21.223.2",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "prod",
              "Name": "sb-prod-liberland-ngw-eip-c",
              "Namespace": "sb"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "sb-prod-liberland-ngw-eip-c",
              "Namespace": "sb"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:556005419303:internet-gateway/igw-0b463fde90176c8b6",
            "id": "igw-0b463fde90176c8b6",
            "owner_id": "556005419303",
            "tags": {
              "Environment": "prod",
              "Name": "sb-prod-liberland-igw",
              "Namespace": "sb"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "sb-prod-liberland-igw",
              "Namespace": "sb"
            },
            "vpc_id": "vpc-0655a625af87e76ec"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-095a785bafae26833",
            "connectivity_type": "public",
            "id": "nat-086a67b5b15c03e99",
            "network_interface_id": "eni-00fa1c830dfe405e4",
            "private_ip": "10.0.3.17",
            "public_ip": "52.22.219.180",
            "subnet_id": "subnet-00b75d3373c4762f7",
            "tags": {
              "Environment": "prod",
              "Name": "sb-prod-liberland-ngw-a",
              "Namespace": "sb"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "sb-prod-liberland-ngw-a",
              "Namespace": "sb"
            }
          },
          "dependencies": [
            "aws_eip.ngw-a",
            "aws_internet_gateway.igw",
            "aws_subnet.public-a",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d2790736a190e1a6",
            "connectivity_type": "public",
            "id": "nat-02c45ecddcc9538b5",
            "network_interface_id": "eni-065050a5d2602ca6a",
            "private_ip": "10.0.4.186",
            "public_ip": "3.226.86.88",
            "subnet_id": "subnet-02de2abd4fc1c93e6",
            "tags": {
              "Environment": "prod",
              "Name": "sb-prod-liberland-ngw-b",
              "Namespace": "sb"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "sb-prod-liberland-ngw-b",
              "Namespace": "sb"
            }
          },
          "dependencies": [
            "aws_eip.ngw-b",
            "aws_internet_gateway.igw",
            "aws_subnet.public-b",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-06404542c9a870980",
            "connectivity_type": "public",
            "id": "nat-06832657a827ef66b",
            "network_interface_id": "eni-0ed71cb197970c82d",
            "private_ip": "10.0.5.157",
            "public_ip": "107.21.223.2",
            "subnet_id": "subnet-0325f218d98de7d06",
            "tags": {
              "Environment": "prod",
              "Name": "sb-prod-liberland-ngw-c",
              "Namespace": "sb"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "sb-prod-liberland-ngw-c",
              "Namespace": "sb"
            }
          },
          "dependencies": [
            "aws_eip.ngw-c",
            "aws_internet_gateway.igw",
            "aws_subnet.public-c",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0b463fde90176c8b6",
            "id": "r-rtb-07bfa14cf223730601080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-07bfa14cf22373060",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "ngw-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0c503d3c8f74eaaa41080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-086a67b5b15c03e99",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0c503d3c8f74eaaa4",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.ngw-a",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.a",
            "aws_route_table.private-a",
            "aws_subnet.public-a",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "ngw-b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-09245037e41f183261080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-02c45ecddcc9538b5",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-09245037e41f18326",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc",
            "aws_eip.ngw-b",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.b",
            "aws_route_table.private-b",
            "aws_subnet.public-b"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "ngw-c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0e0d025f9a53e6fe21080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-06832657a827ef66b",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0e0d025f9a53e6fe2",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.ngw-c",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.c",
            "aws_route_table.private-c",
            "aws_subnet.public-c",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:556005419303:route-table/rtb-0c503d3c8f74eaaa4",
            "id": "rtb-0c503d3c8f74eaaa4",
            "owner_id": "556005419303",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-086a67b5b15c03e99",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "prod",
              "Name": "sb-prod-liberland-rt-private-a",
              "Namespace": "sb"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "sb-prod-liberland-rt-private-a",
              "Namespace": "sb"
            },
            "vpc_id": "vpc-0655a625af87e76ec"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private-b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:556005419303:route-table/rtb-09245037e41f18326",
            "id": "rtb-09245037e41f18326",
            "owner_id": "556005419303",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-02c45ecddcc9538b5",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "prod",
              "Name": "sb-prod-liberland-rt-private-b",
              "Namespace": "sb"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "sb-prod-liberland-rt-private-b",
              "Namespace": "sb"
            },
            "vpc_id": "vpc-0655a625af87e76ec"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private-c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:556005419303:route-table/rtb-0e0d025f9a53e6fe2",
            "id": "rtb-0e0d025f9a53e6fe2",
            "owner_id": "556005419303",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-06832657a827ef66b",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "prod",
              "Name": "sb-prod-liberland-rt-private-c",
              "Namespace": "sb"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "sb-prod-liberland-rt-private-c",
              "Namespace": "sb"
            },
            "vpc_id": "vpc-0655a625af87e76ec"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:556005419303:route-table/rtb-07bfa14cf22373060",
            "id": "rtb-07bfa14cf22373060",
            "owner_id": "556005419303",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0b463fde90176c8b6",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "prod",
              "Name": "sb-prod-liberland-rt-public",
              "Namespace": "sb"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "sb-prod-liberland-rt-public",
              "Namespace": "sb"
            },
            "vpc_id": "vpc-0655a625af87e76ec"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a9ad27d4aed5a96e",
            "route_table_id": "rtb-0c503d3c8f74eaaa4",
            "subnet_id": "subnet-0177bb0654af00d98"
          },
          "dependencies": [
            "aws_subnet.private-a",
            "aws_vpc.vpc",
            "aws_route_table.private-a"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08130669e670b311d",
            "route_table_id": "rtb-09245037e41f18326",
            "subnet_id": "subnet-0f0758825065051d8"
          },
          "dependencies": [
            "aws_route_table.private-b",
            "aws_subnet.private-b",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03cad10f5fde5932e",
            "route_table_id": "rtb-0e0d025f9a53e6fe2",
            "subnet_id": "subnet-039631a5568a0464f"
          },
          "dependencies": [
            "aws_route_table.private-c",
            "aws_subnet.private-c",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b083f3dd4928452e",
            "route_table_id": "rtb-07bfa14cf22373060",
            "subnet_id": "subnet-00b75d3373c4762f7"
          },
          "dependencies": [
            "aws_route_table.public",
            "aws_subnet.public-a",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02f4e05dc13a147af",
            "route_table_id": "rtb-07bfa14cf22373060",
            "subnet_id": "subnet-02de2abd4fc1c93e6"
          },
          "dependencies": [
            "aws_route_table.public",
            "aws_subnet.public-b",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01b96db837326c41e",
            "route_table_id": "rtb-07bfa14cf22373060",
            "subnet_id": "subnet-0325f218d98de7d06"
          },
          "dependencies": [
            "aws_route_table.public",
            "aws_subnet.public-c",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "efs",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:556005419303:security-group/sg-0af6226fbbfa438b3",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [
                  "sg-017e986f4e94abbbc",
                  "sg-01a61137e24c60f5a",
                  "sg-0ca04347984b0c62e"
                ],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0af6226fbbfa438b3",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 2049,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-017e986f4e94abbbc",
                  "sg-01a61137e24c60f5a",
                  "sg-0ca04347984b0c62e"
                ],
                "self": false,
                "to_port": 2049
              }
            ],
            "name": "efs-sg",
            "name_prefix": "",
            "owner_id": "556005419303",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0655a625af87e76ec"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eks_node_group.ondemand",
            "aws_eks_node_group.spotone",
            "aws_eks_node_group.spottwo",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:556005419303:subnet/subnet-0177bb0654af00d98",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.0.0/24",
            "id": "subnet-0177bb0654af00d98",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "556005419303",
            "tags": {
              "Environment": "prod",
              "Name": "sb-prod-liberland-subnet-private-a",
              "Namespace": "sb",
              "kubernetes.io/cluster/liberland": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "sb-prod-liberland-subnet-private-a",
              "Namespace": "sb",
              "kubernetes.io/cluster/liberland": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0655a625af87e76ec"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:556005419303:subnet/subnet-0f0758825065051d8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0f0758825065051d8",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "556005419303",
            "tags": {
              "Environment": "prod",
              "Name": "sb-prod-liberland-subnet-private-b",
              "Namespace": "sb",
              "kubernetes.io/cluster/liberland": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "sb-prod-liberland-subnet-private-b",
              "Namespace": "sb",
              "kubernetes.io/cluster/liberland": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0655a625af87e76ec"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:556005419303:subnet/subnet-039631a5568a0464f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-039631a5568a0464f",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "556005419303",
            "tags": {
              "Environment": "prod",
              "Name": "sb-prod-liberland-subnet-private-c",
              "Namespace": "sb",
              "kubernetes.io/cluster/liberland": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "sb-prod-liberland-subnet-private-c",
              "Namespace": "sb",
              "kubernetes.io/cluster/liberland": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0655a625af87e76ec"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:556005419303:subnet/subnet-00b75d3373c4762f7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.3.0/24",
            "id": "subnet-00b75d3373c4762f7",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "556005419303",
            "tags": {
              "Environment": "prod",
              "Name": "sb-prod-liberland-subnet-public-a",
              "Namespace": "sb",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "sb-prod-liberland-subnet-public-a",
              "Namespace": "sb",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0655a625af87e76ec"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:556005419303:subnet/subnet-02de2abd4fc1c93e6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.4.0/24",
            "id": "subnet-02de2abd4fc1c93e6",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "556005419303",
            "tags": {
              "Environment": "prod",
              "Name": "sb-prod-liberland-subnet-public-b",
              "Namespace": "sb",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "sb-prod-liberland-subnet-public-b",
              "Namespace": "sb",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0655a625af87e76ec"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:556005419303:subnet/subnet-0325f218d98de7d06",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.5.0/24",
            "id": "subnet-0325f218d98de7d06",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "556005419303",
            "tags": {
              "Environment": "prod",
              "Name": "sb-prod-liberland-subnet-public-c",
              "Namespace": "sb",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "sb-prod-liberland-subnet-public-c",
              "Namespace": "sb",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0655a625af87e76ec"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:556005419303:vpc/vpc-0655a625af87e76ec",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-043e882fe78ec8359",
            "default_route_table_id": "rtb-0eda5c881e67e1482",
            "default_security_group_id": "sg-097126d49e353934b",
            "dhcp_options_id": "dopt-24c2dc46",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0655a625af87e76ec",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0eda5c881e67e1482",
            "owner_id": "556005419303",
            "tags": {
              "Environment": "prod",
              "Name": "sb-prod-liberland-vpc",
              "Namespace": "sb"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "sb-prod-liberland-vpc",
              "Namespace": "sb"
            }
          }
        }
      ]
    }
  ]
}